# Liquify

./: .gitignore  Cargo.toml  adb_crash.txt  adb_log.txt  adb_log_2.txt  adb_log_release.txt  build.rs  build_and_run.bat  build_log.txt  build_release.bat  liquify_logs.bat  watch_fps.bat
Liquify-main/: color.ini  liquify-settings.js  theme.js  user.css
scratch/: VideoDecoder.kt  cleanup_pipeline.ps1  fix_pipeline.ps1  test_ndk_api.rs  test_video.rs
shaders/: Schromatic.wgsl  Sgausblur.wgsl  boxblur.wgsl  fragment.wgsl  gradient_text.wgsl  icon.wgsl  render.wgsl  text.wgsl  vector_icons.wgsl  vertex.wgsl  ycbcr_blit.frag.spv  ycbcr_blit.vert.spv
src/: lib.rs  main.rs
src/calculator/: mod.rs
src/ecs/: components.rs  entities.rs  manager.rs  mod.rs  systems.rs  world.rs
src/font/: mod.rs
src/input/: mod.rs
src/render/: draw.rs  geometry.rs  mod.rs  pipeline.rs
src/ui/: layout.rs
src/video/: android_hw.rs  desktop.rs  mod.rs  raw_vulkan_ycbcr.rs  vulkan_import.rs  ycbcr_pipeline.rs
tools/msdf-atlas-gen-bin/msdf-atlas-gen/: charset.txt
